design index fait

--- a/front/index.html
+++ b/front/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="topBarAndBody.css">
+    <link rel="stylesheet" href="CentralContainer.css">
 </head>
 <body>
+    <div id="container">
+        <div id="topBar">
+            <p id="txtTicketHack">Tickethack</p>
+            <div id="subContenairTopBar">
+                <a class="btnOtherPage" href="">Cart</a>
+                <a class="btnOtherPage" href="">Booking</a>
+            </div>
+        </div>
     
+    <div id="containerTrains">
+        <div id="containerSearch" class="centralConainers">
+            <input type="text" name="" id="searchByDeparture" class="inputSearch">
+            <input type="text" name="" id="searchByArrival" class="inputSearch">
+            <input type="date" name="" id="searchByDate" class="inputSearch">
+            <div id="btnSearch" >Search</div>
+        </div>
+
+        <div id="containerFound" class="centralConainers">
+            <img src="./images/train.png" alt="" id="imgTrajetFound">
+            <p id="txtFound">it's time to book your future trip.</p>
+        </div>
+
+    </div>
+
+
+
+    </div>
 </body>
+    <script src="./index.js"></script>
 </html>
