--- a/front/accueil/index.html
+++ b/front/accueil/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="topBarAndBody.css">
-    <link rel="stylesheet" href="CentralContainer.css">
+    <title>Accueil</title>
+    <link rel="stylesheet" href="../topBarAndBody.css">
+    <link rel="stylesheet" href="accueilCentralContainer.css">
 </head>
 <body>
-    <div id="container">
+    <div class="mainContainer" id="containerAccueil">
         <div id="topBar">
-            <p id="txtTicketHack">Tickethack</p>
+            <a id="txtTicketHack" href="./index.html">Tickethack</a>
             <div id="subContenairTopBar">
-                <a class="btnOtherPage" href="">Cart</a>
-                <a class="btnOtherPage" href="">Booking</a>
+                <a class="btnOtherPage" href="../cart/cart.html">Cart</a>
+                <a class="btnOtherPage" href="../booking/booking.html">Booking</a>
             </div>
         </div>
     
@@ -26,7 +26,7 @@
         </div>
 
         <div id="containerFound" class="centralConainers">
-            <img src="./images/train.png" alt="" id="imgTrajetFound">
+            <img src="../images/train.png" alt="" id="imgTrajetFound">
             <p id="txtFound">it's time to book your future trip.</p>
         </div>
 
