--- a/front/accueil/index.html
+++ b/front/accueil/index.html
@@ -22,7 +22,7 @@
             <h1>
                 Explore the world effortlessly by train
             </h1>
-            <h4>Compare, book and enjoy for train tickets: yoru journer starts on Tickethack</h4>
+            <h4>Compare, book and enjoy for train tickets: your journey starts on Tickethack</h4>
         </div>
         <div id="containerTrains">
             <div id="containerSearch" class="centralConainers">
@@ -38,7 +38,7 @@
             </div>
 
         </div>
-        
+
     </div>
 
 
