--- a/front/cart/cart.html
+++ b/front/cart/cart.html
@@ -18,12 +18,23 @@
         </div>
 
         <div id="centralContainer">
-            <p>No ticket in your cart.</p>
-            <p>Why not plan a trip?</p>
+                <p>My cart</p>
+                <div class="travelList">
+                <span>${trajet.departure} > ${trajet.arrival}</span>
+                <span>${getFullHours(trajet.date)}</span>
+                <span>${trajet.price}€</span>
+                <span class="supprimer">X</span>
+            </div>
+
+            
+            <!-- <p>No ticket in your cart.</p>
+            <p>Why not plan a trip?</p> -->
+        </div>
+
+        <div>
 
 
         </div>
-
 
 
 
