--- a/front/accueil/index.html
+++ b/front/accueil/index.html
@@ -20,14 +20,14 @@
             <a id="txtTicketHack" href="./index.html">Tickethack</a>
             <div id="subContenairTopBar">
                 <a class="btnOtherPage" href="../cart/cart.html">Cart</a>
-                <a class="btnOtherPage" href="../booking/booking.html">Booking</a>
+                <a class="btnOtherPage" href="../booking/booking.html">Bookings</a>
             </div>
         </div>
 
         <div id="containerTrains">
             <div id="title">
                 <h1>
-                    Explore the world effortlessly by train
+                    Explore the world effortlessly by train!
                 </h1>
                 <h4>Compare, book and enjoy for train tickets: your journey starts on Tickethack</h4>
             </div>
