cart fonction en cour

--- a/front/cart/cart.html
+++ b/front/cart/cart.html
@@ -18,17 +18,9 @@
         </div>
 
         <div id="centralContainer">
-                <p>My cart</p>
-                <div class="travelList">
-                <span>${trajet.departure} > ${trajet.arrival}</span>
-                <span>${getFullHours(trajet.date)}</span>
-                <span>${trajet.price}€</span>
-                <span class="supprimer">X</span>
-            </div>
 
-            
-            <!-- <p>No ticket in your cart.</p>
-            <p>Why not plan a trip?</p> -->
+            <p>No ticket in your cart.</p>
+            <p>Why not plan a trip?</p>
         </div>
 
         <div>
