modification du front de la page d'accueil

--- a/front/booking/booking.html
+++ b/front/booking/booking.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>booking</title>
     <link rel="stylesheet" href="../topBarAndBody.css">
     <link rel="stylesheet" href="bookingCentralContainer.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
+
 <body>
     <div class="mainContainer" id="containerCart">
         <div id="topBar">
@@ -27,9 +32,10 @@
 
 
 
-        
+
     </div>
-    
+
 </body>
-    <script src="booking.js"></script>
+<script src="booking.js"></script>
+
 </html>
