amélioration du desing de la page cart

--- a/front/cart/cart.html
+++ b/front/cart/cart.html
@@ -24,7 +24,7 @@
 
         <div id="centralContainer">
 
-            <p>No ticket in your cart.</p>
+            <p>No tickets in your cart.</p>
             <p>Why not plan a trip?</p>
         </div>
 
