finalisation design page cart

--- a/front/booking/booking.html
+++ b/front/booking/booking.html
@@ -18,7 +18,7 @@
             <a id="txtTicketHack" href="../accueil/index.html">Tickethack</a>
             <div id="subContenairTopBar">
                 <a class="btnOtherPage" href="../cart/cart.html">Cart</a>
-                <a class="btnOtherPage" href="./booking.html">Booking</a>
+                <a class="btnOtherPage" href="./booking.html">Bookings</a>
             </div>
         </div>
 
