--- a/front/cart/cart.html
+++ b/front/cart/cart.html
@@ -18,7 +18,7 @@
             <a id="txtTicketHack" href="../accueil/index.html">Tickethack</a>
             <div id="subContenairTopBar">
                 <a class="btnOtherPage" href="./cart.html">Cart</a>
-                <a class="btnOtherPage" href="../booking/booking.html">Booking</a>
+                <a class="btnOtherPage" href="../booking/booking.html">Bookings</a>
             </div>
         </div>
 
@@ -27,12 +27,6 @@
             <p>No tickets in your cart.</p>
             <p>Why not plan a trip?</p>
         </div>
-
-        <div>
-
-
-        </div>
-
 
 
 
