modification du css booking

--- a/front/booking/booking.html
+++ b/front/booking/booking.html
@@ -23,8 +23,8 @@
         </div>
 
         <div id="centralContainer">
-            <p>No booking yet.</p>
-            <p>Why not plan a trip?</p>
+            <p class="nobooking">No booking yet.</p>
+            <p class="nobooking">Why not plan a trip?</p>
 
 
         </div>
